chore: fix z-index

--- a/packages/front/app/TabsContainer.module.css
+++ b/packages/front/app/TabsContainer.module.css
@@ -5,7 +5,7 @@
 
   .tabs {
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     top: var(--topbar-height);
     width: calc(100dvw - var(--content-margin-left));
     height: var(--tabs-height);
