--- a/packages/front/modules/ui-kit/ContextMenu/ContextMenu.module.css
+++ b/packages/front/modules/ui-kit/ContextMenu/ContextMenu.module.css
@@ -1,5 +1,5 @@
 :global(body):has(.contextMenu) {
-  --context-menu-z-index: 10;
+  --context-menu-z-index: 500;
 }
 
 /* Context Menu Styles */
