--- a/packages/front/modules/ui-kit/upload/YouTubeUpload.module.css
+++ b/packages/front/modules/ui-kit/upload/YouTubeUpload.module.css
@@ -48,7 +48,6 @@
   left: 1rem;
   top: 50%;
   transform: translateY(-50%);
-  z-index: 1;
   pointer-events: none;
 
   .youtubeLogo {
